<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">성적표</string>
    <string name="back">뒤로가기</string>
    <string name="basic">일반설정</string>
    <string name="custom">고급설정</string>
    <string name="title_data_empty">표시할 데이터가 없습니다.\n데이터를 추가해주세요.</string>
    <string name="database_update_title">데이터 업데이트</string>
    <string name="database_update_message">데이터베이스를 업데이트하고 있습니다.</string>
    <!-- Menu -->
    <string name="action_settings">설정</string>
    <string name="action_add">추가</string>
    <string name="action_edit">편집</string>
    <string name="title_activity_settings">설정</string>
    <string name="title_bug_report">개발자에게 메일보내기</string>
    <string name="title_other_apps">개발자의 다른앱</string>
    <!-- List Activity -->
    <string name="title_activity_exam_category">시험 카테고리 목록</string>
    <string name="title_activity_subject_category">과목 카테고리 목록</string>
    <string name="title_activity_show_subject">과목 목록</string>
    <string name="title_activity_analytics_subject">과목 통계</string>
    <string name="title_activity_analytics_subject_format">%1$s 통계</string>
    <!-- Add Activity -->
    <string name="title_activity_create_exam">시험 추가</string>
    <string name="title_activity_create_subject">과목 추가</string>
    <string name="title_activity_add_exam_data">시험 성적 추가</string>
    <string name="title_activity_create_exam_category">시험 카테고리 추가</string>
    <string name="title_activity_create_subject_category">과목 카테고리 추가</string>
    <!-- Edit Activity-->
    <string name="title_activity_edit_exam">시험 수정</string>
    <string name="title_activity_edit_subject">과목 수정</string>
    <string name="title_activity_edit_subject_data">시험 성적 수정</string>
    <string name="title_activity_edit_exam_category">시험 카테고리 수정</string>
    <string name="title_activity_edit_subject_category">과목 카테고리 수정</string>
    <!-- Create Exam -->
    <string name="edit_exam_color">색상 변경</string>
    <string name="edit_category">카테고리 변경</string>
    <!-- Detail Exam Activity -->
    <string name="title_activity_show_exam_detail">시험 상세 정보</string>
    <string name="subject">과목</string>
    <string name="graph">통계</string>
    <string name="rank_format">%1$d / %2$d</string>
    <string name="score_format">%1$.2f점</string><!-- http://ellieya.tistory.com/160, http://stackoverflow.com/questions/1915074/understanding-the-in-javas-format-strings -->
    <string name="class_format">%1$d등급</string>
    <!-- Subject List -->
    <string name="not_delete_subject_title">과목 삭제 불가능</string>
    <string name="not_delete_subject_message">이미 과목이 사용되어 삭제가 불가능 합니다.</string>
    <!-- Category List -->
    <string name="not_delete_category_title">카테고리 삭제 불가능</string>
    <string name="not_delete_category_message">이미 카테고리가 사용되어 삭제가 불가능 합니다.</string>
    <string name="not_delete_basic_category_message">기본 카테고리는 삭제할 수 없습니다.</string>
    <!-- ExamActivity -->
    <string name="not_exists_subject_title">과목 없음</string>
    <string name="not_exists_subject_message">추가된 과목이 없거나 모든 과목이 추가되었습니다.\n확인을 눌러 먼저 과목을 추가하세요.</string>

</resources>
