<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_exam_list"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="시험 목록 보기" />
        <item
            android:id="@+id/action_statistics"
            android:icon="@drawable/ic_timeline"
            android:title="과목 통계 보기" />
    </group>

    <item android:title="목록">
        <menu>
            <item
                android:id="@+id/action_add_exam"
                android:icon="@drawable/ic_add"
                android:title="@string/title_activity_create_exam" />
            <item
                android:id="@+id/action_add_subject"
                android:icon="@drawable/ic_add"
                android:title="@string/title_activity_create_subject" />
            <item
                android:id="@+id/action_view_subject"
                android:icon="@drawable/ic_view_list"
                android:title="@string/title_activity_show_subject" />
        </menu>
    </item>

    <item android:title="카테고리">
        <menu>
            <item
                android:id="@+id/action_add_exam_category"
                android:icon="@drawable/ic_add"
                android:title="@string/title_activity_create_exam_category" />
            <item
                android:id="@+id/action_add_subject_category"
                android:icon="@drawable/ic_add"
                android:title="@string/title_activity_create_subject_category" />
            <item
                android:id="@+id/action_view_exam_category"
                android:icon="@drawable/ic_view_list"
                android:title="@string/title_activity_exam_category" />
            <item
                android:id="@+id/action_view_subject_category"
                android:icon="@drawable/ic_view_list"
                android:title="@string/title_activity_subject_category" />
        </menu>
    </item>

</menu>